<resources>
    <string name="app_name">Find Your Team</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Failed"</string>
    <string name="phone_number">"请输入电话号码"</string>
    <string name="send_code">"发送验证码"</string>
    <string name="check_code">"验证"</string>
    <string name="prompt_confirm_password">"请再次输入密码"</string>
    <string name="action">"确认"</string>
    <string name="set_school">"请输入学校名称"</string>
    <string name="set_school_number">"请输入工号"</string>
    <string name="set_name">"请输入姓名"</string>
    <string name="first_button_desc">“编辑我的人才林     >”</string>
    <string name="second_button_desc"></string>
    <string name="third_button_desc"></string>
    <string name="fourth_button_desc"></string>
    <string name="back_button_desc"></string>
    <string name="add_tag_button_desc"></string>
    <string name="send_button_desc"></string>
    <string name="project_info">项目总库 | 据说集齐7个项目就能召唤神龙</string>
    <string name="genius_forest_info">人才林 | 点击进入……进入神魔？自己想罢</string>
    <string name="app_welcome">欢迎进入Find Your Team\n在这里，你可以寻找志同道合的朋友\n在这里，你可以收获崭新待开发的项目\n在这里，你可以找到小伙伴和你一起完成软件工程的作业</string>
</resources>