<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <!-- 手机号码输入框 -->
    <ImageView
        android:id="@+id/splash_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:src="@drawable/tubiao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/check_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/send_code"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_number" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        tools:layout_editor_absoluteX="0dp">

        <!-- 四个验证码输入框 -->
        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusDown="@+id/editText2"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="2"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusDown="@+id/editText3"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="3"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusDown="@+id/editText4"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="4"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusDown="@+id/editText1"
            android:textCursorDrawable="@null" />


    </LinearLayout>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 发送验证码按钮 -->


    <!-- 检查验证码按钮 -->


</androidx.constraintlayout.widget.ConstraintLayout>